<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskDetails">

    <TextView
        android:id="@+id/task-name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/task-description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task-name" />

    <TextView
        android:id="@+id/details_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="232dp"
        android:layout_height="126dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="232dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_available"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="196dp" />

        <RadioButton
            android:id="@+id/assigned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_assigned"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="248dp" />

        <RadioButton
            android:id="@+id/accepted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_accepted"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="149dp" />

        <RadioButton
            android:id="@+id/finished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_finished"
            />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>